CSP Updates. SVG corrections

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Inter:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; font-src 'self' https://fonts.gstatic.com https://fonts.googleapis.com data:; connect-src 'self' https://localhost:3000 ws://localhost:5173 wss://localhost:5173; img-src 'self' data:; frame-src https://js.stripe.com; base-uri 'self'; object-src 'none'"
-    />
-    <title>dsentr</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/themeBootstrapper.ts"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/dsentr.svg" />
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Inter:wght@400;600&display=swap"
+    rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; font-src 'self' https://fonts.gstatic.com https://fonts.googleapis.com data:; connect-src 'self' https://api.dsentr.com ws://app.dsentr.com wss://app.dsentr.com; img-src 'self' data:; frame-src https://js.stripe.com; base-uri 'self'; object-src 'none'" />
+  <title>DSentr</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/themeBootstrapper.ts"></script>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
