--- a/frontend-admin/index.html
+++ b/frontend-admin/index.html
@@ -4,8 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self' https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; font-src 'self' https://fonts.gstatic.com https://fonts.googleapis.com data:; connect-src 'self' https://api.dsentr.com ws://app.dsentr.com wss://app.dsentr.com; img-src 'self' data:; frame-src https://js.stripe.com; base-uri 'self'; object-src 'none'" />
+  <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self';
+        script-src 'self' https://static.cloudflareinsights.com;
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com;
+        font-src 'self' https://fonts.gstatic.com https://fonts.googleapis.com data:;
+        connect-src 'self' https://api.dsentr.com ws://admin.dsentr.com wss://admin.dsentr.com;
+        img-src 'self' data:;
+        frame-src 'none';
+        base-uri 'self';
+        object-src 'none';
+    " />
   <title>Dsentr Admin</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
