--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Inter:wght@400;600&display=swap"
     rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self' https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; font-src 'self' https://fonts.gstatic.com https://fonts.googleapis.com data:; connect-src 'self' https://api.dsentr.com ws://app.dsentr.com wss://app.dsentr.com; img-src 'self' data:; frame-src https://js.stripe.com; base-uri 'self'; object-src 'none'" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
+      script-src 'self' https://static.cloudflareinsights.com;
+      script-src 'self' https://js.stripe.com; 
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; 
+      font-src 'self' https://fonts.gstatic.com https://fonts.googleapis.com data:; 
+      connect-src 'self' https://api.dsentr.com ws://app.dsentr.com wss://app.dsentr.com; img-src 'self' data:; 
+      frame-src https://js.stripe.com; base-uri 'self'; object-src 'none'" />
   <title>DSentr</title>
 </head>
 
