--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,11 +8,14 @@
     rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
-      script-src 'self' https://static.cloudflareinsights.com https://js.stripe.com; 
+      script-src 'self' https://static.cloudflareinsights.com https://js.stripe.com https://apis.google.com https://accounts.google.com https://www.gstatic.com 'unsafe-eval';
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; 
       font-src 'self' https://fonts.gstatic.com https://fonts.googleapis.com data:; 
-      connect-src 'self' https://api.dsentr.com ws://app.dsentr.com wss://app.dsentr.com; img-src 'self' data:; 
-      frame-src https://js.stripe.com; base-uri 'self'; object-src 'none'" />
+      connect-src 'self' https://api.dsentr.com ws://app.dsentr.com wss://app.dsentr.com https://*.googleapis.com; 
+      img-src 'self' data: https://www.gstatic.com https://*.googleusercontent.com; 
+      frame-src https://js.stripe.com https://docs.google.com https://drive.google.com https://accounts.google.com;
+      base-uri 'self'; object-src 'none'" />
+  <base href="/" />
   <title>DSentr</title>
 </head>
 
