--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
       script-src 'self' https://static.cloudflareinsights.com https://js.stripe.com https://apis.google.com https://accounts.google.com https://www.gstatic.com 'unsafe-eval';
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; 
       font-src 'self' https://fonts.gstatic.com https://fonts.googleapis.com data:; 
-      connect-src 'self' https://api.dsentr.com ws://app.dsentr.com wss://app.dsentr.com https://*.googleapis.com; 
+      connect-src 'self' https://api.dsentr.com ws://app.dsentr.com wss://app.dsentr.com https://*.googleapis.com http://localhost:5173 ws://localhost:5173 wss://localhost:5173 http://localhost:3000; 
       img-src 'self' data: https://www.gstatic.com https://*.googleusercontent.com; 
       frame-src https://js.stripe.com https://docs.google.com https://drive.google.com https://accounts.google.com;
       base-uri 'self'; object-src 'none'" />
