dev frontend admin deploy setup

--- a/frontend-admin/index.html
+++ b/frontend-admin/index.html
@@ -9,7 +9,7 @@
         script-src 'self' https://static.cloudflareinsights.com;
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com;
         font-src 'self' https://fonts.gstatic.com https://fonts.googleapis.com data:;
-        connect-src 'self' https://api.dsentr.com ws://admin.dsentr.com wss://admin.dsentr.com;
+        connect-src 'self' https://api.dsentr.com https://api-dev.dsentr.com ws://admin.dsentr.com ws://admin-dev.dsentr.com wss://admin.dsentr.com wss://admin-dev.dsentr.com;
         img-src 'self' data:;
         frame-src 'none';
         base-uri 'self';
